# doublepack

./: CMakeLists.txt  README.md
GR/: PrimitiveElement.cpp  PrimitiveElement.h  gr.cpp  gr.h
PSS/: pss.cpp  pss.h
RMFE/: HenselLift.cpp  HenselLift.hpp  Inverse.cpp  Inverse.hpp  NM_RMFE.cpp  NM_RMFE.hpp  PrimitiveElement.cpp  RMFE.cpp  RMFE.h  RMFE.hpp  RMFE.md  utils.cpp  utils.hpp
experiment/: fi.cc  misc.h  ours.cc
secure-computation-library/: CMakeLists.txt  Makefile
secure-computation-library/include/scl/net/: channel.h
src/: dp.h
src/dp/: circuits.h  correlator.cc  correlator.h  fi_prep.cc  gate.cc  gate.h  input_gate.h  mult_gate.cc  mult_gate.h  output_gate.h
src/dp/circuits/: building.cc  cleartext.cc  generic.cc  offline.cc  online.cc
test/: GRmult_test.cc  GRmult_test.cpp  RMFE_test.cc  RMFE_test.cpp  channel_specialized_test.cc  fi_prep_test.cc  input_test.cc  mult_test.cc  output_test.cc  pss_test.cc  pss_test.cpp
